--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link rel="stylesheet" href="<%= BASE_URL %>css/reset.css">
+  <!-- 引入阿里字体图标 -->
+  <link rel="stylesheet" href="https://at.alicdn.com/t/font_2714450_samxfbf8mw.css">
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
